supporting deduping records

--- a/tests/scholar20.bib
+++ b/tests/scholar20.bib
@@ -1,3 +1,4 @@
+%test
 @article{mahmud2004prostate,
   title={Prostate cancer and use of nonsteroidal anti-inflammatory drugs: systematic review and meta-analysis},
   author={Mahmud, Salaheddin and Franco, Eduardo and Aprikian, A},
